# Warzone

./: .gitignore  CMakeLists.txt  CreateVisualStudio2015Projects.bat  README.md
codemp/cgame/: CMakeLists.txt  animtable.h  cg_consolecmds.cpp  cg_cubemaps.cpp  cg_cull.cpp  cg_cvar.cpp  cg_draw.cpp  cg_drawtools.cpp  cg_effects.cpp  cg_ents.cpp  cg_event.cpp  cg_foliage.cpp  cg_holster.cpp  cg_holster.h  cg_info.cpp  cg_laserbolts.cpp  cg_local.h  cg_localents.cpp  cg_main.cpp  cg_mapefx.cpp  cg_marks.cpp  cg_nav_autowaypoint.cpp  cg_nav_navmesh_creator.cpp  cg_newDraw.cpp  cg_players.cpp  cg_playerstate.cpp  cg_predict.cpp  cg_public.h  cg_saga.cpp  cg_scoreboard.cpp  cg_servercmds.cpp  cg_snapshot.cpp  cg_spawn.cpp  cg_syscalls.cpp  cg_texttospeech.cpp  cg_turret.cpp  cg_view.cpp  cg_weaponinit.cpp  cg_weapons.cpp  cg_weather.cpp  (+9 more)
codemp/game/: CMakeLists.txt  NPC.cpp  NPC_AI_Animal.cpp  NPC_AI_AssassinDroid.cpp  NPC_AI_Atst.cpp  NPC_AI_Cower.cpp  NPC_AI_Default.cpp  NPC_AI_Droid.cpp  NPC_AI_Fighter.cpp  NPC_AI_GalakMech.cpp  NPC_AI_Grenadier.cpp  NPC_AI_Howler.cpp  NPC_AI_ImperialProbe.cpp  NPC_AI_Interrogator.cpp  NPC_AI_Jedi.cpp  NPC_AI_Jetpack.cpp  NPC_AI_Mark1.cpp  NPC_AI_Mark2.cpp  NPC_AI_MineMonster.cpp  NPC_AI_Padawan.cpp  NPC_AI_Path.cpp  NPC_AI_Patrol.cpp  NPC_AI_Rancor.cpp  NPC_AI_Remote.cpp  NPC_AI_RocketTrooper.cpp  NPC_AI_SaberDroid.cpp  NPC_AI_Sand_Creature.cpp  NPC_AI_Seeker.cpp  NPC_AI_Sentry.cpp  NPC_AI_Sniper.cpp  NPC_AI_Speeder.cpp  NPC_AI_Stormtrooper.cpp  NPC_AI_Utils.cpp  NPC_AI_Walker.cpp  NPC_AI_Wampa.cpp  NPC_Behavior.cpp  NPC_Combat.cpp  NPC_Conversations.cpp  NPC_Goal.cpp  NPC_Move.cpp  (+85 more)
codemp/rd-warzone/: CMakeLists.txt  G2_API.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  VectorUtils3.cpp  VectorUtils3.h  ckheap.h  compose_models.cpp  compose_models.h  glext.h  malloc.cpp  nuklear.h  qgl.h  tr_WorldEffects.cpp  tr_animation.cpp  tr_awesomium.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cache.cpp  tr_clouds.cpp  tr_cmds.cpp  tr_cubemaps.cpp  tr_curve.cpp  tr_debug.cpp  tr_debug.h  tr_extensions.cpp  tr_extramath.cpp  tr_extramath.h  tr_fbo.cpp  tr_fbo.h  tr_flares.cpp  tr_foliage.cpp  tr_ghoul2.cpp  tr_glsl.cpp  tr_glsl.h  tr_image.cpp  tr_image_dds.cpp  tr_init.cpp  tr_instancing.cpp  (+37 more)
codemp/rd-warzone/TinyImageLoader/: TILColors.h  TILFileStream.cpp  TILFileStream.h  TILFileStreamStd.cpp  TILFileStreamStd.h  TILImage.cpp  TILImage.h  TILImageBMP.cpp  TILImageBMP.h  TILImageDDS.cpp  TILImageDDS.h  TILImageGIF.cpp  TILImageGIF.h  TILImageICO.cpp  TILImageICO.h  TILImagePNG.cpp  TILImagePNG.h  TILImageTGA.cpp  TILImageTGA.h  TILImageTemplate.cpp  TILImageTemplate.h  TILInternal.h  TILSettings.h  TinyImageLoader.cpp  TinyImageLoader.h
codemp/rd-warzone/anl/: anl.h
codemp/rd-warzone/glsl/: anaglyph_fp.glsl  anaglyph_vp.glsl  anamorphic_blur_fp.glsl  anamorphic_combine_fp.glsl  bloomArea_combine_fp.glsl  bloom_blur_fp.glsl  bloom_blur_vp.glsl  bloom_combine_fp.glsl  bokeh_fp.glsl  calclevels4x_fp.glsl  clouds_fp.glsl  clouds_vp.glsl  compact.cpp  darkexpand_fp.glsl  depthOfField2_fp.glsl  depthOfField2_vp.glsl  depthOfField_fp.glsl  depthblur_fp.glsl  depthblur_vp.glsl  dglow_downsample_fp.glsl  dglow_upsample_fp.glsl  dglow_upsample_vp.glsl  esharpening2_fp.glsl  esharpening_fp.glsl  fogpass_vp.glsl  fxaa_fp.glsl  fxaa_vp.glsl  gaussian_blur_fp.glsl  gaussian_blur_vp.glsl  generateNormalMap_fp.glsl  generateNormalMap_vp.glsl  generic_fp.glsl  generic_vp.glsl  hbaoCombine_fp.glsl  hbao_fp.glsl  lensflare_fp.glsl  lensflare_vp.glsl  lightallSplat_fp.glsl  lightallSplat_gs.glsl  lightallSplat_vp.glsl  (+42 more)
codemp/rd-warzone/glsl2/: blendingFunctions_fp.glsl  bloomRays_fp.glsl  cellShade_fp.glsl  cellShade_vp.glsl  colorCorrection_fp.glsl  deferredLighting_fp.glsl  deferredLighting_vp.glsl  depthAdjust_fp.glsl  depthAdjust_vp.glsl  depthPass_fp.glsl  depthPass_vp.glsl  distanceBlur_fp.glsl  dofFocusDepth_fp.glsl  dofFocusDepth_vp.glsl  fastBlur_fp.glsl  fire_fp.glsl  fogPost_fp.glsl  fogPost_vp.glsl  foliage_cs.glsl  foliage_es.glsl  foliage_fp.glsl  foliage_gs.glsl  foliage_vp.glsl  fur_fp.glsl  fur_gs.glsl  fur_vp.glsl  grass2_cs.glsl  grass2_fp.glsl  grass2_gs.glsl  grass2_vp.glsl  instanceVao_fp.glsl  instanceVao_vp.glsl  instance_fp.glsl  instance_vp.glsl  linearizeDepth_fp.glsl  magicParticlesFireFly_fp.glsl  magicParticlesTree_fp.glsl  magicParticles_fp.glsl  magicdetail_fp.glsl  magicdetail_vp.glsl  (+50 more)
codemp/rd-warzone/glsl3/: fastLighting_fp.glsl  forcefield_fp.glsl  forcefield_vp.glsl  fsrSharpen_fp.glsl  fsrUpscale_fp.glsl  grassPatches_cs.glsl  grassPatches_es.glsl  grassPatches_fp.glsl  grassPatches_gs.glsl  grassPatches_vp.glsl  shadowBlur_fp.glsl  ssrtgiBufferSetup_fp.glsl  ssrtgiBufferSetup_vp.glsl  ssrtgiCopyFilter_fp.glsl  ssrtgiOutput_fp.glsl  ssrtgiRayTrace_fp.glsl  ssrtgiStencilSetup_fp.glsl  ssrtgiStencilSetup_vp.glsl  white_vp.glsl  zFarCopy_fp.glsl  zFarCopy_vp.glsl  zFarDepth_fp.glsl
codemp/rd-warzone/imgui/: .gitignore  .gitmodules  ffi.cpp  imgui.cpp  imgui.ini  imgui_api.cpp  imgui_api.h  imgui_c_utils.cpp  imgui_c_utils.h  imgui_default_docks.cpp  imgui_default_docks.h  imgui_demo.cpp  imgui_dock.cpp  imgui_dock.h  imgui_dock.layout  imgui_fixedarea.cpp  imgui_fixedarea.h  imgui_impl_idtech3_gles.cpp  imgui_impl_idtech3_gles.h  imgui_internal.h  imgui_utils.cpp  imgui_utils.h  include_imgui.h  include_quakegl.h
codemp/rd-warzone/imgui_docks/: dock.cpp  dock.h  dock_console.cpp  dock_console.h  dock_julia.cpp  dock_julia.h  dock_node.cpp  dock_node.h  dock_repl.cpp  dock_repl.h  dock_skeleton.cpp  dock_skeleton.h
codemp/rd-warzone/imgui_docks_openjk/: dock_all.cpp  dock_all.h  dock_characterEditor.cpp  dock_characterEditor.h  dock_controlflow.cpp  dock_controlflow.h  dock_mapinfo.cpp  dock_mapinfo.h  dock_mdxa.cpp  dock_mdxa.h  dock_mdxm.cpp  dock_mdxm.h  dock_models.cpp  dock_models.h  dock_perf.cpp  dock_perf.h  dock_postprocess.cpp  dock_postprocess.h  (+2 more)
codemp/ui/: CMakeLists.txt  ui_force.cpp  ui_gameinfo.cpp  ui_local.h  ui_main.cpp  ui_public.h  ui_saber.cpp  ui_shared.cpp  ui_shared.h  ui_syscalls.cpp  ui_xcvar.h
(+283 files in other folders)
